# rust-rest-api

./: .env.example  .gitignore  Cargo.toml  docker-compose.yml
scripts/: create_tasks_table.sql
src/: main.rs
